[gd_scene load_steps=9 format=3 uid="uid://cyske4246ykj8"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_8yo55"]
[ext_resource type="Texture2D" uid="uid://et80vkqxckym" path="res://graphics/player/player.png" id="1_enj32"]
[ext_resource type="Texture2D" uid="uid://bf4busgnxomjy" path="res://graphics/decals/white.png" id="3_a65bg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_724cm"]
radius = 63.6396

[sub_resource type="Gradient" id="Gradient_6nr1e"]
colors = PackedColorArray(0.117647, 1, 1, 0.666667, 0.54902, 1, 1, 0.666667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wi7h4"]
gradient = SubResource("Gradient_6nr1e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_basgy"]
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.117647, 1, 1, 0.392157)
color_ramp = SubResource("GradientTexture1D_wi7h4")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ixybk"]
polygon = PackedVector2Array(-55, -27, -61, -12, -58, 1, -55, 13, -49, 24, -44, 35, -40, 43, -36, 49, -32, 56, -21, 60, -7, 60, 11, 58, 23, 51, 33, 47, 41, 45, 52, 42, 69, 41, 57, 45, 60, 51, 73, 54, 90, 55, 97, 55, 95, 46, 103, 43, 110, 36, 120, 36, 121, 32, 129, 31, 136, 25, 132, 15, 130, 6, 123, 11, 123, 2, 114, 4, 110, -3, 96, -3, 91, -9, 80, -9, 72, -8, 62, -25, 50, -27, 44, -39, 36, -49, 26, -60, 10, -59, -2, -58, -12, -53, -15, -56, -24, -50, -28, -45, -32, -44, -39, -45, -48, -43, -51, -37)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_8yo55")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 2)
rotation = 1.5708
texture = ExtResource("1_enj32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_724cm")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGrenade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(133, 20)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 13)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 29)

[node name="GrenadeStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(126, 17)

[node name="Marker2D2" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(126, 25)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(131, 23)
emitting = false
process_material = SubResource("ParticleProcessMaterial_basgy")
texture = ExtResource("3_a65bg")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_ixybk")

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_laser_timeout"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
